assets/css/3-sections/_contact.sass
#contact
    > div
        width: 40%
        margin-left: 30%

        @media (max-width: 1220px)
            width: 50%
            margin-left: 25%
        
        @media (max-width: 900px)
            width: 60%
            margin-left: 20%
        
        @media (max-width: 735px)
            width: 100%
            margin: 0
            padding: 0

        .borderbox

            display: inline-block
            margin: 2em
            padding: 0.3em 0
            width: 100%
            border: solid
            border-width: 1px

            @media (max-width: 735px)
                margin: 0

            h2
                letter-spacing: 10px

            .email-lockup
                a
                    font-size: 1.5em
                    color: $mainfontcolor
                
                p
                    font-size: 1.5em
                    display: inline
                
                @media (max-width: 1400px)
                    font-size: 0.9em

